2007-09-27  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/base.py (HtmlResource.title): change the
	default title of all Buildbot-generated page to "Buildbot"
	* buildbot/status/web/builder.py (StatusResourceBuilder.getTitle):
	change the title to include the Builder name
	* buildbot/status/web/build.py (StatusResourceBuild.getTitle):
	same, and also show the build number

2007-09-26  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/baseweb.py (OneBoxPerBuilder.body): fix URL
	problem with the build links

2007-09-25  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/base.py (HtmlResource.render): fix addSlash
	to emit relative URLs instead of using URLPath,

	* docs/buildbot.texinfo (WebStatus): provide an example

	* buildbot/status/web/baseweb.py (OneBoxPerBuilder): new status
	page, shows a simple table with one row per Builder. Still pretty
	ugly, but functional.
	* buildbot/status/web/index.html: reference it

	* buildbot/status/web/waterfall.py (Spacer): make this *not*
	inherit from builder.Event, so that show_events=false doesn't hide
	spacers, since that would make the waterfall weirdly compressed.

	* buildbot/status/web/waterfall.py (HELP): put the View button in
	its own section, so it doesn't get visually confused with the
	reload-timer section
	(WaterfallStatusResource.body): make the '[help]' links more
	visually distinct from each other, and add a link to the Welcome
	page
	* buildbot/status/web/slaves.py (BuildSlavesResource): handle
	unused buildslaves without exploding

	* buildbot/status/web/waterfall.py
	(WaterfallStatusResource.body.with_args): don't use req.URLPath,
	it gives us absolute paths that break proxies
	* buildbot/status/web/base.py (HtmlResource.path_to_root): fix
	this, it was giving bad results when the Waterfall is behind a
	reverse proxy.

	* buildbot/scripts/runner.py (upgradeMaster): first phase of the
	new 'upgrade-master' command, which will bring an old buildmaster